--- a/style.css
+++ b/style.css
@@ -78,7 +78,18 @@ text-align: center;
     font-family: 'Open Sans Condensed', sans-serif;
     font-weight: bold;
     outline: 0;
+    border: 0;
+    border: 2px #27283a;
+    border-style: none none solid none;
+    background-color: #6B6E96;
+    color: #181a2b;
 }
+
+#celsius {
+    border: 2px #27283a;
+    border-style: solid none none none;
+}
+
 
 .footer {
     background-color: #40425a;
@@ -98,10 +109,39 @@ text-align: center;
         box-shadow: none;
     }
 
-    /**
- * Set default style for invalid elements.
+button {
+    width: 100%;
+    grid-row: 4 / 5;
+    border: 0;
+    height: 100px;
+    background-color: #6B6E96;
+    padding: 0px 0;
+    font-size: 5em;
+    text-align: center;
+    color: #181a2b;
+}
+
+button:hover {
+    background-color: #393b50;
+    color: #6B6E96;
+}
+
+
+    /*
+    Set default style for invalid elements.
  */
 :not(output):-moz-ui-invalid {
     box-shadow: 0 0 0 0 rgba(255, 0, 242, 0);
   }
   
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: checkbox-container;
+}
